# unused

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: unusedConfig.cmake
include/: unused.hpp
src/: main.cpp
tests/: CMakeLists.txt  console_app_tests.cpp
